<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View   android:id="@+id/_bg__search_screen"
        android:background="@drawable/_bg__search_screen_shape"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/component_1"
            android:layout_below="@+id/component_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View   android:id="@+id/_bg__component_1_ek1"
                android:background="@drawable/_bg__component_1_ek1_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="411dp"
                android:layout_height="46dp" />

            <View   android:id="@+id/rectangle_20"
                android:background="@drawable/rectangle_20_shape"
                android:alpha="0.46999999880791"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="411dp"
                android:layout_height="46dp" />


            <RelativeLayout android:id="@+id/lucide_library"
                android:layout_marginTop="11dp"
                android:layout_marginStart="360.77dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/playlist"
                    android:src="@drawable/library"
                    android:contentDescription="vector_ek1"
                    android:layout_marginStart="4.57dp"
                    android:layout_marginTop="4dp"
                    android:layout_width="20.27dp"
                    android:layout_height="18dp" />

            </RelativeLayout>

            <ImageView android:id="@+id/search"
                android:src="@drawable/search"
                android:contentDescription="vector_ek2"
                android:layout_marginStart="134.72dp"
                android:layout_marginTop="11dp"
                android:layout_width="27.4dp"
                android:layout_height="24dp" />

            <RelativeLayout android:id="@+id/octicon_home_24"
                android:layout_marginTop="11dp"
                android:layout_marginStart="21.69dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/home"
                    android:src="@drawable/home"
                    android:contentDescription="vector_ek3"
                    android:layout_marginStart="3.43dp"
                    android:layout_marginTop="2.23dp"
                    android:layout_width="20.55dp"
                    android:layout_height="18.77dp" />

            </RelativeLayout>

            <RelativeLayout android:id="@+id/fluent_add_16_filled"
                android:layout_marginTop="11dp"
                android:layout_marginStart="247.74dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView android:id="@+id/add"
                    android:src="@drawable/add"
                    android:contentDescription="vector_ek4"
                    android:layout_marginStart="3.42dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="19.69dp"
                    android:layout_height="17.25dp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/component_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View
                android:id="@+id/rectangle_19"
                android:background="@drawable/rectangle_19_shape"
                android:layout_marginStart="0dp"
                android:layout_width="411dp"
                android:layout_height="46dp" />

            <ImageView
                android:id="@+id/rectangle_21"
                android:src="@drawable/rectangle_21"
                android:contentDescription="rectangle_21"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/khayaal"
                android:textSize="15sp"
                android:textColor="@color/khayaal_color"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="57dp"
                android:layout_width="78.5dp"
                android:layout_height="20.5dp"
                android:text="@string/khayaal_string" />

            <TextView
                android:id="@+id/tailwinder"
                android:textColor="@color/khayaal_color"
                android:layout_marginLeft="57dp"
                android:layout_below="@id/khayaal"
                android:layout_width="55dp"
                android:layout_height="13dp"
                android:textSize="12sp"
                android:text="@string/tailwinder_string" />

            <RelativeLayout
                android:layout_centerVertical="true"
                android:id="@+id/solar_play_linear"
                android:layout_marginStart="316dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/vector_ek5"
                    android:src="@drawable/play"
                    android:contentDescription="vector_ek5"
                    android:layout_marginStart="1.5dp"
                    android:layout_marginTop="0.5dp"
                    android:layout_width="20.5dp"
                    android:layout_height="21.5dp" />

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:textSize="25sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="51dp"
        android:layout_width="206.5dp"
        android:layout_height="38.5dp"
        android:text="@string/search_string"
        />

    <TextView android:id="@+id/search_ek1"
        android:textSize="25sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="51dp"
        android:layout_width="206.5dp"
        android:layout_height="38.5dp"
        android:text="@string/search_ek1_string"
        />

    <TextView android:id="@+id/search_ek2"
        android:textSize="25sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="51dp"
        android:layout_width="206.5dp"
        android:layout_height="38.5dp"
        android:text="@string/search_ek2_string"
        />

    <View   android:id="@+id/rectangle_22"
        android:background="@drawable/rectangle_22_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="94dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <View   android:id="@+id/rectangle_23"
        android:background="@drawable/rectangle_23_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="179dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <View   android:id="@+id/rectangle_25"
        android:background="@drawable/rectangle_25_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="279dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <View   android:id="@+id/rectangle_27"
        android:background="@drawable/rectangle_27_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="379dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <View   android:id="@+id/rectangle_24"
        android:background="@drawable/rectangle_24_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="229dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <View   android:id="@+id/rectangle_26"
        android:background="@drawable/rectangle_26_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="329dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <View   android:id="@+id/rectangle_28"
        android:background="@drawable/rectangle_28_shape"
        android:layout_marginStart="33dp"
        android:layout_marginTop="429dp"
        android:layout_width="341dp"
        android:layout_height="45dp" />

    <TextView android:id="@+id/what_do_you_want_to_listen_"
        android:textSize="13sp"
        android:textColor="@color/what_do_you_want_to_listen__color"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="106dp"
        android:layout_width="191.3dp"
        android:layout_height="17.3dp"
        android:text="@string/what_do_you_want_to_listen__string"
        />

    <TextView android:id="@+id/recent_searches"
        android:textSize="12sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="151dp"
        android:layout_width="113.2dp"
        android:layout_height="19.2dp"
        android:text="@string/recent_searches_string"
        />

    <ImageView android:id="@+id/beerbongs___bentleys_by_post_malone_1"
        android:src="@drawable/beerbongs___bentleys_by_post_malone_1"
        android:contentDescription="beerbongs___bentleys_by_post_malone_1"
        android:layout_marginStart="38dp"
        android:layout_marginTop="184dp"
        android:layout_width="42dp"
        android:layout_height="35dp" />

    <ImageView android:id="@+id/beerbongs___bentleys_by_post_malone_3"
        android:src="@drawable/beerbongs___bentleys_by_post_malone_3"
        android:contentDescription="beerbongs___bentleys_by_post_malone_3"
        android:layout_marginStart="38dp"
        android:layout_marginTop="284dp"
        android:layout_width="42dp"
        android:layout_height="35dp" />

    <ImageView android:id="@+id/beerbongs___bentleys_by_post_malone_5"
        android:src="@drawable/beerbongs___bentleys_by_post_malone_5"
        android:contentDescription="beerbongs___bentleys_by_post_malone_5"
        android:layout_marginStart="38dp"
        android:layout_marginTop="384dp"
        android:layout_width="42dp"
        android:layout_height="35dp" />

    <ImageView android:id="@+id/beerbongs___bentleys_by_post_malone_2"
        android:src="@drawable/beerbongs___bentleys_by_post_malone_2"
        android:contentDescription="beerbongs___bentleys_by_post_malone_2"
        android:layout_marginStart="38dp"
        android:layout_marginTop="234dp"
        android:layout_width="42dp"
        android:layout_height="35dp" />

    <ImageView android:id="@+id/beerbongs___bentleys_by_post_malone_4"
        android:src="@drawable/beerbongs___bentleys_by_post_malone_4"
        android:contentDescription="beerbongs___bentleys_by_post_malone_4"
        android:layout_marginStart="38dp"
        android:layout_marginTop="334dp"
        android:layout_width="42dp"
        android:layout_height="35dp" />

    <ImageView android:id="@+id/beerbongs___bentleys_by_post_malone_6"
        android:src="@drawable/beerbongs___bentleys_by_post_malone_6"
        android:contentDescription="beerbongs___bentleys_by_post_malone_6"
        android:layout_marginStart="38dp"
        android:layout_marginTop="434dp"
        android:layout_width="42dp"
        android:layout_height="35dp" />

    <TextView android:id="@+id/aankhein_khuli"
        android:textSize="13sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="188dp"
        android:layout_width="113.3dp"
        android:layout_height="17.3dp"
        android:text="@string/aankhein_khuli_string"
        />

    <TextView android:id="@+id/aankhein_khuli_ek1"
        android:textSize="13sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="288dp"
        android:layout_width="113.3dp"
        android:layout_height="17.3dp"
        android:text="@string/aankhein_khuli_ek1_string"
        />

    <TextView android:id="@+id/aankhein_khuli_ek2"
        android:textSize="13sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="388dp"
        android:layout_width="113.3dp"
        android:layout_height="17.3dp"
        android:text="@string/aankhein_khuli_ek2_string"
        />

    <TextView android:id="@+id/aankhein_khuli_ek3"
        android:textSize="13sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="238dp"
        android:layout_width="113.3dp"
        android:layout_height="17.3dp"
        android:text="@string/aankhein_khuli_ek3_string"
        />

    <TextView android:id="@+id/aankhein_khuli_ek4"
        android:textSize="13sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="338dp"
        android:layout_width="113.3dp"
        android:layout_height="17.3dp"
        android:text="@string/aankhein_khuli_ek4_string"
        />

    <TextView android:id="@+id/aankhein_khuli_ek5"
        android:textSize="13sp"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="438dp"
        android:layout_width="113.3dp"
        android:layout_height="17.3dp"
        android:text="@string/aankhein_khuli_ek5_string"
        />

    <TextView android:id="@+id/song__latamangeshkar"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="206dp"
        android:layout_width="109.7dp"
        android:layout_height="14.7dp"
        android:text="@string/song__latamangeshkar_string"
        />

    <TextView android:id="@+id/song__latamangeshkar_ek1"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="306dp"
        android:layout_width="109.7dp"
        android:layout_height="14.7dp"
        android:text="@string/song__latamangeshkar_ek1_string"
        />

    <TextView android:id="@+id/song__latamangeshkar_ek2"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="406dp"
        android:layout_width="109.7dp"
        android:layout_height="14.7dp"
        android:text="@string/song__latamangeshkar_ek2_string"
        />

    <TextView android:id="@+id/song__latamangeshkar_ek3"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="256dp"
        android:layout_width="109.7dp"
        android:layout_height="14.7dp"
        android:text="@string/song__latamangeshkar_ek3_string"
        />

    <TextView android:id="@+id/song__latamangeshkar_ek4"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="356dp"
        android:layout_width="109.7dp"
        android:layout_height="14.7dp"
        android:text="@string/song__latamangeshkar_ek4_string"
        />

    <TextView android:id="@+id/song__latamangeshkar_ek5"
        android:textColor="@color/search_color"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="456dp"
        android:layout_width="109.7dp"
        android:layout_height="14.7dp"
        android:text="@string/song__latamangeshkar_ek5_string"
        />



</RelativeLayout>
