<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <View   android:id="@+id/_bg__signup_screen"
        android:background="@drawable/_bg__signup_screen_shape"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/username"
        android:layout_marginStart="62dp"
        android:layout_marginTop="144dp"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:hint="Insert your username"
        android:textColor="@color/insert_your_username_color"
        android:inputType="text"
        android:background="@drawable/rounded_text_background" />

    <EditText
        android:id="@+id/name"
        android:background="@drawable/rounded_text_background"
        android:layout_marginStart="62dp"
        android:layout_marginTop="250dp"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:textColor="@color/insert_your_username_color"
        android:inputType="text"
        android:hint="Insert your name"
        />

    <EditText   android:id="@+id/email"
        android:background="@drawable/rectangle_1_shape"
        android:layout_marginStart="62dp"
        android:layout_marginTop="356dp"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:textColor="@color/insert_your_username_color"
        android:inputType="text"
        android:hint="Insert your email"
        />

    <EditText   android:id="@+id/password"
        android:background="@drawable/rectangle_1_shape"
        android:layout_marginStart="62dp"
        android:layout_marginTop="459dp"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:textColor="@color/insert_your_username_color"
        android:inputType="text"
        android:hint="Insert your password"
        />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="107dp"
        android:layout_width="159.8dp"
        android:layout_height="21.8dp"
        android:text="@string/username_string"
        />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="213dp"
        android:layout_width="159.8dp"
        android:layout_height="21.8dp"
        android:text="@string/name_string"
        />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="319dp"
        android:layout_width="159.8dp"
        android:layout_height="21.8dp"
        android:text="@string/email_string"
        />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="422dp"
        android:layout_width="159.8dp"
        android:layout_height="21.8dp"
        android:text="@string/password_string"
        />


    <View   android:id="@+id/signup"
        android:background="@drawable/rectangle_5_shape"
        android:layout_marginStart="62dp"
        android:layout_marginTop="593dp"
        android:layout_width="288dp"
        android:layout_height="45dp" />

    <TextView android:id="@+id/sign_up"
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="604dp"
        android:layout_width="80.8dp"
        android:layout_height="28.8dp"
        android:text="@string/sign_up_string"
        />

</RelativeLayout>
