<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/_bg__login_screen_shape" />

    <EditText   android:id="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="218dp"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:hint="Insert your username"
        android:textColor="@color/insert_your_username_color"
        android:inputType="text"
        android:background="@drawable/rounded_text_background" />


    <EditText   android:id="@+id/password"
        android:background="@drawable/rounded_text_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="314dp"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:textColor="@color/insert_your_username_color"
        android:inputType="text"
        android:hint="Insert your password"
        />

    <View   android:id="@+id/login"
        android:background="@drawable/rectangle_4_shape"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="445dp"
        android:layout_width="288dp"
        android:layout_height="45dp" />

    <TextView android:id="@+id/usernametxt"
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="191dp"
        android:layout_width="159.8dp"
        android:layout_height="21.8dp"
        android:text="@string/username_string"
        />

    <TextView android:id="@+id/passwordtxt"
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="287dp"
        android:layout_width="159.8dp"
        android:layout_height="21.8dp"
        android:text="@string/password_string"
        />

    <TextView android:id="@+id/log_in"
        android:textSize="18sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="456dp"
        android:layout_width="66.8dp"
        android:layout_height="28.8dp"
        android:text="@string/log_in_string"
        />

<!--    <TextView android:id="@+id/remember_me"-->
<!--        android:textSize="15sp"-->
<!--        android:textColor="@color/username_color"-->
<!--        android:layout_marginLeft="86dp"-->
<!--        android:layout_marginTop="389dp"-->
<!--        android:layout_width="157.3dp"-->
<!--        android:layout_height="20.3dp"-->
<!--        android:text="@string/remember_me_string"-->
<!--        />-->

    <TextView android:id="@+id/forgot_password_"
        android:textSize="15sp"
        android:textColor="@color/username_color"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="389dp"
        android:layout_width="122.3dp"
        android:layout_height="20.3dp"
        android:text="@string/forgot_password__string"
        />


<!--    <View   android:id="@+id/rmmbrme"-->
<!--        android:background="@drawable/baseline_check_box_outline_blank_24"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="389dp"-->
<!--        android:layout_width="17dp"-->
<!--        android:layout_height="17dp" />-->

    <ImageView android:id="@+id/imageonline_co_transparentimage_1"
        android:src="@drawable/imageonline_co_transparentimage_1"
        android:contentDescription="imageonline_co_transparentimage_1"
        android:layout_marginStart="297dp"
        android:layout_marginTop="25dp"
        android:layout_width="84dp"
        android:layout_height="84dp" />

    <TextView
        android:textSize="15sp"
        android:clickable="true"
        android:textColor="@color/username_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="517dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        />
    <TextView android:id="@+id/sign_up"
        android:textSize="18sp"
        android:clickable="true"
        android:textStyle="bold"
        android:textColor="@color/username_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="547dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        />

</RelativeLayout>
